# Weather-Forecasting-ETL

./: .cache.sqlite  Makefile  README.md  main.py  pyproject.toml  weather_data.csv
docs/: mkdocs.yml
docs/docs/: index.md
models/: daily_temperature_model.joblib  model.joblib
notebooks/: note.ipynb
reports/: forecast_eval.csv
src/: config.py  etl.py  feature_engineer.py  forecast_new.py  forecast_prophet.py  forecast_xgb.py  ingestion.py  motherduck_utils.py  train.py  train_prophet.py  train_xgb.py  utils.py  xgb.py
src/API/: data_flow.py
src/pipline/: api_data_load.py
