[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "batch_serving"
version = "0.0.1"
description = "simple project to implent batch serving forecasting using open source APIs"
authors = [
  { name = "Abdelrahman Samir" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "pip",
    "python-dotenv",
    "ruff",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["batch_serving"]
include = ["pyproject.toml", "batch_serving/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["batch_serving"]
force-sort-within-sections = true

